Fixed the border-radius of the image when on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,6 +173,7 @@ main {
         width: unset;
         height: 200px;
         overflow: hidden;
+        border-radius: 0px;
     }
 
     .right-container {
